# appflowy-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.example.yml  mcp_smoke_test.py  pyproject.toml  smoke_test.py
.github/workflows/: release.yml
src/appflowy_mcp/: __main__.py  client.py  config.py  doc_builder.py  markdown.py  markdown_to_blocks.py  server.py
