[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appflowy-mcp"
version = "0.4.0"
description = "MCP server for AppFlowy-Cloud — lets LLMs read pages from a self-hosted AppFlowy instance"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pycrdt>=0.10",
]

[project.scripts]
appflowy-mcp = "appflowy_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/appflowy_mcp"]
